# lilac

./: .env  .gitignore  0.15.2  2.4.0  DESIGN.md  LICENSE  NOTICE  README.md  TODO.md  package-lock.json  pyproject.toml
docs/: conf.py
integration_tests/: fastapi_integration.py  run_llamacpp_test.py  test_llamacpp_embedding.py
lilac/: env.py  load_test.py  router_signal.py  utils.py
lilac/data/: clustering_test.py  dataset_duckdb.py
lilac/embeddings/: llamacpp.py  nomic_embed.py
lilac_deployer/: app.py
osmanthus/: __init__.py  _version.py  auth.py  batch_utils.py  batch_utils_test.py  cli.py  config.py  conftest.py  dataset_format.py  dataset_format_test.py  db_manager.py  deploy.py  env.py  hf_docker_start.py  load.py  load_dataset.py  load_dataset_test.py  make_openapi.py  parquet_writer.py  project.py  project_test.py  router_concept.py  router_data_loader.py  router_dataset.py  router_dataset_signals.py  router_google_login.py  router_rag.py  router_tasks.py  router_utils.py  schema.py  schema_duckdb.py  schema_test.py  server.py  server_concept_test.py  server_dataset_signals_test.py  server_dataset_test.py  server_mount_test.py  server_signal_test.py  server_test.py  signal.py  (+7 more)
osmanthus/concepts/: __init__.py  concept.py  concept_test.py  db_concept.py  db_concept_test.py
osmanthus/concepts/language-model-reference/: concept.json
osmanthus/concepts/negative-sentiment/: concept.json
osmanthus/concepts/non-english/: concept.json
osmanthus/concepts/positive-sentiment/: concept.json
osmanthus/concepts/profanity/: concept.json
osmanthus/concepts/question/: concept.json
osmanthus/concepts/source-code/: concept.json
osmanthus/concepts/toxicity/: concept.json
osmanthus/data/: __init__.py  cluster_titling.py  clustering.py  dataset.py  dataset_compute_signal_chain_test.py  dataset_compute_signal_test.py  dataset_config_test.py  dataset_duckdb.py  dataset_export_test.py  dataset_labels_test.py  dataset_load_embedding_test.py  dataset_map_test.py  dataset_project_test.py  dataset_select_groups_test.py  dataset_select_rows_filter_test.py  dataset_select_rows_schema_test.py  dataset_select_rows_search_test.py  dataset_select_rows_sort_test.py  dataset_select_rows_udf_test.py  dataset_stats_test.py  dataset_storage_utils.py  dataset_test.py  dataset_test_utils.py  dataset_utils.py  dataset_utils_test.py
osmanthus/embeddings/: __init__.py  bge.py  cohere.py  default_vector_stores.py  embedding.py  embedding_test.py  gte.py  jina.py  openai.py  sbert.py  transformer_utils.py  vector_store.py  vector_store_hnsw.py  vector_store_numpy.py  vector_store_test.py
osmanthus/formats/: __init__.py  default_formats.py  openai_json.py  openai_json_test.py  openchat.py  openchat_test.py  sharegpt.py  sharegpt_test.py
osmanthus/hf_docker/: .dockerignore  .gitignore  Dockerfile  LICENSE  docker_start.sh
osmanthus/rag/: __init__.py  rag.py
osmanthus/signals/: __init__.py  concept_labels.py  concept_labels_test.py  concept_scorer.py  concept_scorer_test.py  default_signals.py  filter_mask.py  lang_detection.py  lang_detection_test.py  markdown_code_block.py  markdown_code_block_test.py  minhash_dup.py  near_dup.py  near_dup_test.py  ner.py  ner_test.py  pii.py  pii_presidio.py  pii_secrets.py  pii_test.py  semantic_similarity.py  semantic_similarity_test.py  substring_search.py  substring_search_test.py  text_statistics.py  text_statistics_test.py
osmanthus/sources/: csv_source.py  csv_source_test.py  dict_source.py  dict_source_test.py  duckdb_utils.py  github_source.py  gmail_source.py  huggingface_source.py  huggingface_source_test.py  json_source.py  json_source_test.py  langsmith.py  llama_index_docs_source.py  llama_index_docs_source_test.py  pandas_source.py  pandas_source_test.py  parquet_source.py  parquet_source_test.py  reddit_hf_source.py  sqlite_source.py  sqlite_source_test.py
osmanthus/splitters/: __init__.py  chunk_splitter.py  chunk_splitter_test.py  spacy_splitter.py  spacy_splitter_test.py  text_splitter_test_utils.py  text_splitter_test_utils_test.py
osmanthus/templates/: list_files.html
scripts/: deploy_demo.py  deploy_lilac_deployer.py  deploy_staging.py  make_fastapi_client.py
web/blueprint/: svelte.config.js  tailwind.config.js
web/blueprint/src/: app.css
web/blueprint/src/lib/: view_utils.spec.ts  view_utils.ts
web/blueprint/src/lib/components/: ApiErrorModal.svelte  ComputeClusterModal.svelte  ErrorNotifications.svelte  GoogleAnalytics.svelte  HuggingFaceSpaceWelcome.svelte  Navigation.svelte  NavigationCategory.svelte  Page.svelte  Spinner.svelte  TaskStatus.svelte
web/blueprint/src/lib/queries/: conceptQueries.ts  datasetQueries.ts  googleAuthQueries.ts  langsmithQueries.ts  queryClient.ts  queryUtils.ts  ragQueries.ts  serverQueries.ts  signalQueries.ts  sqliteQueries.ts  taskQueries.ts
web/blueprint/src/lib/stores/: datasetViewStore.ts  navigationStore.ts  ragViewStore.ts  taskMonitoringStore.ts  urlHashStore.ts
web/blueprint/src/routes/: +layout.svelte
web/blueprint/src/routes/concepts/: +page.svelte
web/lib/fastapi_client/models/: AddLabelsOptions.ts  AuthenticationInfo.ts  BinaryFilter.ts  ClusterInfo.ts  ClusterInputFormatSelectorInfo.ts  ClusterOptions.ts  ClusterResponse.ts  Column.ts  ComputeSignalOptions.ts  ComputeSignalResponse.ts  Concept.ts  ConceptACL.ts  ConceptInfo.ts  ConceptLabelsSignal.ts  ConceptMetadata.ts  ConceptMetrics.ts  ConceptModelInfo.ts  ConceptSearch.ts  ConceptSignal.ts  ConceptUpdate.ts  ConceptUserAccess.ts  CreateConceptOptions.ts  DataType.ts  DatasetInfo.ts  DatasetManifest.ts  DatasetSettings.ts  DatasetUISettings.ts  DatasetUserAccess.ts  DefaultClusterOutputPathOptions.ts  DeleteRowsOptions.ts  DeleteSignalOptions.ts  DeleteSignalResponse.ts  EmbeddingInfo.ts  Example.ts  ExampleIn.ts  ExampleOrigin.ts  ExportOptions.ts  Field.ts  GetStatsOptions.ts  KeywordSearch.ts  (+51 more)
web/lib/fastapi_client/services/: ConceptsService.ts  DataLoadersService.ts  DatasetsService.ts  DefaultService.ts  GoogleLoginService.ts  RagService.ts  SignalsService.ts  SqliteService.ts  TasksService.ts
(+73 files in other folders)
